# cs430-project-4-recursive-raytracing

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: 4_planes_1_sphere_4_lights.json  4_planes_1_sphere_4_lights.ppm  simple_pointlight.json  simple_pointlight.ppm  simple_spotlight.json  simple_spotlight.ppm
src/: 3dmath.h  constants.h  helpers.c  helpers.h  imaging.h  json.c  json.h  json_helpers.c  json_helpers.h  json_parsers.c  json_parsers.h  main.c  ppm.c  ppm.h  ppm_helpers.c  ppm_helpers.h  raycaster.c  raycaster.h  raycaster_helpers.c  raycaster_helpers.h
